k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: msc-de1-project
  labels:
    app: flask-sample-app
spec:
  selector:
    app: flask-sample-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
